nginxx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginxx
 labels:
   app: nginxx
spec:
 replicas: 2
 selector:
   matchLabels:
     app: nginxx
 template:
   metadata:
     labels:
       app: nginxx
   spec:
     containers:
       - name: nginxx
         image: nginx:1.25-alpine
         ports:
           - containerPort: 80
