nginxx-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginxx
spec:
 type: ClusterIP
 selector:
   app: nginxx
 ports:
   - port: 80
     targetPort: 80
