nginxx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginxx
spec:
 rules:
   - host: nginxx.afpa-devops.lab
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginxx
               port:
                number: 80
